tests/baselines/reference/accessorsOverrideProperty10.errors.txt
accessorsOverrideProperty10.ts(6,7): error TS2611: 'x' is defined as a property in class 'A', but is overridden here in 'C' as an accessor.


==== accessorsOverrideProperty10.ts (1 errors) ====
    class A {
      x = 1;
    }
    class B extends A {}
    class C extends B {
      get x() {
          ~
!!! error TS2611: 'x' is defined as a property in class 'A', but is overridden here in 'C' as an accessor.
        return 2;
      }
    }
    